--- a/src/components/KanbanBoard.css
+++ b/src/components/KanbanBoard.css
@@ -53,7 +53,7 @@
     position: relative;
     top: 20px;
     padding: 20px;
-    min-width: 550px;
+    min-height: 550px;
     height: auto;
     background-color: rgb(239, 239, 239);
     border-top: 1px solid rgb(212, 212, 212);
